2007-01-02  Beth Dakin  <bdakin@apple.com>

        Reviewed by Darin.

        Fix bug with WebCore context menu item "Copy Image."

        * WebCoreSupport/WebContextMenuClient.mm:
        (WebContextMenuClient::copyImageToClipboard): We must call 
        declareTypes on the pasteboard.

2006-12-27  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Geoff.

        - fix http://bugs.webkit.org/show_bug.cgi?id=9403
          Red outline from Web Inspector appears above all other OS X windows

        Made the window containing the highlight a child window of the window
        containing the view.

        * WebInspector/WebNodeHighlight.m:
        (-[WebNodeHighlight initWithBounds:andRects:forView:]):
        (-[WebNodeHighlight dealloc]):
        (-[WebNodeHighlight expire]):

2006-12-27  Matt Lilek  <pewtermoose@gmail.com>

        Reviewed by Tim H.
        
        Bug 11993: REGRESSION(r18320): Web Inspector scroll bars not drawn
        http://bugs.webkit.org/show_bug.cgi?id=11993
        
        AppleVerticalScrollbar tries to set a NaN value as the scroll height which
        causes DOM Exceptions after r18320.  This overrides the _setObjectLength
        method and checks for NaN until a system update can fix this.  See rdar://4901491

        * WebInspector/webInspector/inspector.html:
        * WebInspector/webInspector/inspector.js:

2006-12-27  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Fixed <rdar://problem/4901629> Crash occurs at WebCore::Frame::page() 
        after closing window containing flash content
        
        No testcase because we can't open and close windows in DRT.
        
        I can't reproduce this crash, but from the backtrace it's clear that it 
        occured because of a NULL frame object. Since it's valid for a frame to
        be NULL, I've added NULL checks.

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView sendEvent:]):